Re-fix lineheight stuff to cap off at 1920px wide.
I reverted ccc702beb4254f00b447013e498c81f06d530bf5 and then re-applied the stuff selectively, then squashed (for the ease of testing). I'm a terrible person.

--- a/source/css/desktop.css.scss
+++ b/source/css/desktop.css.scss
@@ -81,13 +81,16 @@
 				max-width: 384px;
         height: 6.5vw;
 				max-height: 125px;
-        line-height: 350%;
+        line-height: 6.1848vw;
         vertical-align: middle;
         padding: 0;
         margin: 0;
         filter: grayscale(100%);
         text-align: center;
         transition: height 0.25s ease-in;
+				@media (min-width: 1920px) {
+					line-height: calc(1920px * 0.061848);
+				}
         &:hover {
             opacity: 1;
             background-color: $nav_item_hover;
@@ -234,16 +237,19 @@
             top: 0px;
             left: 0px;
             height: 3.0934vw;
-						max-height: 125px;
-            line-height: 350%;
+						max-height: calc(1920px * 0.030934);
+            line-height: 3.0934vw;
+						@media (min-width: 1920px ) {
+							line-height: calc(1920px * 0.030934);
+						}
           }
         }
       }
       .dropdown {
-          position: relative;
-          display: inline-block;
-          width: 100%;
-          height: 100%;
+        position: relative;
+        display: inline-block;
+        width: 100%;
+        height: 100%;
       }
       .dropdown-content {
         opacity: 0;
@@ -253,10 +259,6 @@
         /* see http://stackoverflow.com/a/17353755 - fraction height on hover causes a weird jitter, after .roll-up has been removed once... */
         transform: translateZ(0);
         a {
-					float: left;
-					width: 50%;
-					height: auto;
-					margin: auto 0;
           z-index: 100;
           color: $nav_drop_text;
           //transition: opacity ease-out 0.25s; ?!
